<resources>
    <string name="app_name">IST Inventory Management</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_view_history_button">History</string>
    <string name="item_view_checkout_user_button">Checkout</string>
    <string name="item_view_checkout_location_button">Checkout item to location</string>
    <string name="item_view_report_button">Missing</string>
    <string name="feedbacktitle">Check Out Item Form</string>
    <string name="borrowNameLabel">Borrower Name:</string>
    <string name="borrowerName">Borrower Name</string>
    <string name="borrowerUidLabel">Borrower UID:</string>
    <string name="borrowerUid">Borrower UID</string>
    <string name="productNameLabel">Product Name:</string>
    <string name="productName">Product Name</string>
    <string name="serialNumberLabel">Serial Number:</string>
    <string name="serialNumber">Serial #</string>
    <string name="item_checkout_header">Item Checkout Form</string>
    <string name="returnDateLabel">Return Date:</string>
    <string name="returnDate">MM/DD/YYYY</string>
    <string name="checkout_submit">Checkout</string>
    <string name="title_activity_main_logged_in">IST Inventory Management</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="checkout">Add to Cart
    </string>
    <string name="barcodeLabel">Barcode:</string>
    <string name="locationLabel">Location:</string>
    <string name="departmentLabel">Department:</string>
    <string name="uidLabel">UID:</string>
    <string name="classNameLabel">Class:</string>
    <string name="check_in_items">Items Cart</string>
    <string name="items_to_check_out">Borrowed Items</string>
    <string name="select_user">Select Student</string>
    <string name="scan_user_id">Scan Student ID</string>
    <string name="select_from_list">Select Student</string>
    <string name="student_id">Student ID</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="checkout_items">Checkout</string>
    <string name="scan_item">Scan</string>
    <string name="select">Select</string>
    <string name="borrower_selected">User selected</string>
    <string name="selected_student">Selected Student</string>
    <string name="uid">UID:</string>
    <string name="major_label">Major:</string>
    <string name="student_name">Name:</string>
    <string name="student_selected">Selected student</string>
    <string name="checkout_cart_empty">Checkout cart empty</string>
    <string name="no_items_borrowed">No borrowed items</string>
    <string name="no_user_selected">No user selected</string>
    <string name="return_all">Return all</string>
    <string name="btn_go">Go</string>
    <string name="no_user_found">No user found with selected UID</string>
    <string name="i_agree_to_terms_and_conditions">By signing here you agree to the terms and conditions</string>
    <string name="checkout_sign_dialog_title">You are checking out the following items</string>
    <string name="report_offense_title">Report offense for item</string>
    <string name="offense_title">Title</string>
    <string name="description">Description</string>
    <string name="offense_reported">Offense reported</string>

</resources>
