<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:background="@color/section_title_background"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/check_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items_to_check_out"
            style="@style/SectionTitle" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--Select user container-->
        <RelativeLayout
            android:id="@+id/select_user_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_select_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-23dp"
                    android:src="@drawable/ic_person_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_user_selected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="Select an user to see items that are borrowed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />


            </LinearLayout>

        </RelativeLayout>

        <!--Empty container-->
        <RelativeLayout
            android:id="@+id/no_items_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_no_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_shopping_cart_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_items_borrowed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="This user has no borrowed items."
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />


            </LinearLayout>

        </RelativeLayout>

        <!--Content container-->
        <LinearLayout
            android:id="@+id/content_container"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/check_in_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/list_item_items_check_in" />

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btn_return"
                    style="@style/ButtonHighlight"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="36dp"
                    android:text="@string/return_all" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>